--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -173,7 +173,7 @@
     </ng-container>
 
     <ng-container matColumnDef="onlineStatus">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <th mat-header-cell *matHeaderCellDef>
         {{ "LORA-GATEWAY-TABLE.STATUS" | translate }}
       </th>
       <td mat-cell *matCellDef="let gateway">
