--- a/src/app/applications/iot-devices/iot-device-detail/downlink/downlink-tables/downlink-tables.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/downlink/downlink-tables/downlink-tables.component.html
@@ -11,7 +11,7 @@
           {{ "IOTDEVICE.CREATED" | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createdAt | dkTimeWithSeconds }}
+          {{ element.createdAt | dkTimeWithSecondsNoPrefix }}
         </td>
       </ng-container>
 
@@ -67,7 +67,7 @@
           {{ "IOTDEVICE.CREATED" | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createdAt | dkTimeWithSeconds }}
+          {{ element.createdAt | dkTimeWithSecondsNoPrefix }}
         </td>
       </ng-container>
 
@@ -77,7 +77,7 @@
           {{ "IOTDEVICE.DOWNLINK.SENDAT" | translate }}
         </th>
         <td mat-cell *matCellDef="let element">
-          {{ element.sendAt | dkTimeWithSeconds }}
+          {{ element.sendAt | dkTimeWithSecondsNoPrefix }}
         </td>
       </ng-container>
 
@@ -87,7 +87,7 @@
         <td mat-cell *matCellDef="let element">
           {{
             element.acknowledgedAt
-              ? (element.acknowledgedAt | dkTimeWithSeconds)
+              ? (element.acknowledgedAt | dkTimeWithSecondsNoPrefix)
               : ("IOTDEVICE.DOWNLINK.NOT-RECEIVED" | translate)
           }}
         </td>
