--- a/src/app/applications/iot-devices/iot-device-detail/downlink/downlink-dialog/downlink-dialog.component.scss
+++ b/src/app/applications/iot-devices/iot-device-detail/downlink/downlink-dialog/downlink-dialog.component.scss
@@ -1,5 +1,5 @@
 .mat-mdc-dialog-title {
-  padding-left: 20px !important;
+  padding-left: 20px
 }
 .mat-mdc-dialog-content {
   padding-left: 20px !important;
