--- a/src/app/applications/datatarget/datatarget-test-connection/datatarget-test-connection.component.html
+++ b/src/app/applications/datatarget/datatarget-test-connection/datatarget-test-connection.component.html
@@ -3,24 +3,41 @@
     <div class="col-md-6 d-flex align-items-stretch">
       <div class="jumbotron jumbotron--full-width">
         <h3>{{ "DATATARGET.TEST_CONNECTION.TEST-CONNECTION" | translate }}</h3>
-        <button class="mt-3 btn btn-primary">{{ "DATATARGET.TEST_CONNECTION.TEST-CONNECTION" | translate }}</button>
-        <p class="mt-2">{{ "DATATARGET.TEST_CONNECTION.SEND-PING-TO-DATATARGET" | translate }}</p>
-        <mat-divider></mat-divider>
+        <div *ngIf="dataTarget.type === DataTargetType.MQTT">
+          <button (click)="pingDataTarget()"
+                  class="mt-3 btn btn-primary">
+            {{ "DATATARGET.TEST_CONNECTION.TEST-CONNECTION" | translate }}
+          </button>
+          <p class="mt-2">{{ "DATATARGET.TEST_CONNECTION.SEND-PING-TO-DATATARGET" | translate }}</p>
+          <mat-divider></mat-divider>
+        </div>
         <p class="mt-3 font-weight-bold">{{ "DATATARGET.TEST_CONNECTION.SEND-LATEST-PACKAGE" | translate }}</p>
         <mat-select
           (selectionChange)="getLastPackage($event)"
           [placeholder]="'DATATARGET.TEST_CONNECTION.CHOOSE-IOT-DEVICE' | translate"
           class="mt-3 form-control"
-          id="level"
-          name="level"
         >
           <mat-option *ngFor="let iotDevice of iotDevices" [value]="iotDevice.id">
             {{ iotDevice.name }}
           </mat-option>
         </mat-select>
-        <button class="mt-3 btn btn-primary">{{ "DATATARGET.TEST_CONNECTION.SEND-DATA-PACKAGE" | translate }}</button>
-        <p class="mt-2">
+        <mat-select
+          [(value)]="payloadDecoderId"
+          [placeholder]="'DATATARGET.TEST_CONNECTION.CHOOSE-PAYLOAD-DECODER' | translate"
+          class="mt-3 form-control">
+          <mat-option [value]="0">
+            {{ "QUESTION.DATATARGET.NO-PAYLOAD-DECODER-SELECTED" | translate }}
+          </mat-option>
+          <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
+            {{ payloadDecoder.name }}
+          </mat-option>
+        </mat-select>
+        <button (click)="pingDataTarget(payloadData)" [disabled]="!payloadData"
+                class="mt-3 btn btn-primary">{{ "DATATARGET.TEST_CONNECTION.SEND-DATA-PACKAGE" | translate }}
+        </button>
+        <p class="mt-2" style="white-space: pre-wrap">
           {{ "DATATARGET.TEST_CONNECTION.SEND-DATA-PACKAGE-DESCRIPTION" | translate }}
+          {{ dataTarget.type === DataTargetType.MQTT ? ("DATATARGET.TEST_CONNECTION.MQTT-DISCLAIMER"| translate) : "" }}
         </p>
       </div>
     </div>
@@ -38,18 +55,9 @@
     </div>
     <div class="col-md-6 d-flex align-items-stretch">
       <div class="jumbotron jumbotron--full-width">
-        <h3>{{ "DATATARGET.TEST_CONNECTION.SENT-HTTP-REQUEST" | translate }}</h3>
-        <p>{{ "DATATARGET.TEST_CONNECTION.HEADERS" | translate }}</p>
+        <h3>{{ "DATATARGET.TEST_CONNECTION.SENT-DECODED-REQUEST" | translate }}</h3>
         <ngx-monaco-editor
-          [(ngModel)]="codeOutput"
-          [ngModelOptions]="{ standalone: true }"
-          [options]="editorJsonOutpuOptions"
-        >
-        </ngx-monaco-editor>
-
-        <p>{{ "DATATARGET.TEST_CONNECTION.BODY" | translate }}</p>
-        <ngx-monaco-editor
-          [(ngModel)]="codeOutput"
+          [(ngModel)]="decodedData"
           [ngModelOptions]="{ standalone: true }"
           [options]="editorJsonOutpuOptions"
         >
@@ -58,19 +66,12 @@
     </div>
     <div class="col-md-6 d-flex align-items-stretch">
       <div class="jumbotron jumbotron--full-width">
-        <h3>{{ "DATATARGET.TEST_CONNECTION.RECEIVED-HTTP-RESPONSE" | translate }}</h3>
-        <p>{{ "DATATARGET.TEST_CONNECTION.HEADERS" | translate }}</p>
+        <h3>{{ "DATATARGET.TEST_CONNECTION.RECEIVED-RESPONSE" | translate }}</h3>
+        <div *ngIf="loading">
+          <app-loading-spinner></app-loading-spinner>
+        </div>
         <ngx-monaco-editor
-          [(ngModel)]="codeOutput"
-          [ngModelOptions]="{ standalone: true }"
-          [options]="editorJsonOutpuOptions"
-        >
-        </ngx-monaco-editor>
-
-        <p>{{ "DATATARGET.TEST_CONNECTION.BODY" | translate }}</p>
-
-        <ngx-monaco-editor
-          [(ngModel)]="codeOutput"
+          [(ngModel)]="testResponse"
           [ngModelOptions]="{ standalone: true }"
           [options]="editorJsonOutpuOptions"
         >
