--- a/src/app/applications/datatarget/datatarget-test-connection/datatarget-test-connection.component.html
+++ b/src/app/applications/datatarget/datatarget-test-connection/datatarget-test-connection.component.html
@@ -2,10 +2,16 @@
   <div class="row">
     <div class="col-md-6 d-flex align-items-stretch">
       <div class="jumbotron jumbotron--full-width">
-        <h3>{{ "DATATARGET.TEST_CONNECTION.TEST-CONNECTION" | translate }}</h3>
+        <div class="d-flex align-items-start justify-content-between">
+          <h3>{{ "DATATARGET.TEST_CONNECTION.TEST-CONNECTION" | translate }}</h3>
+          <div class="spinner-placeholder">
+            <div *ngIf="loading">
+              <app-loading-spinner></app-loading-spinner>
+            </div>
+          </div>
+        </div>
         <div *ngIf="dataTarget.type === DataTargetType.MQTT">
-          <button (click)="pingDataTarget()"
-                  class="mt-3 btn btn-primary">
+          <button (click)="pingDataTarget()" class="mt-3 btn btn-primary">
             {{ "DATATARGET.TEST_CONNECTION.TEST-CONNECTION" | translate }}
           </button>
           <p class="mt-2">{{ "DATATARGET.TEST_CONNECTION.SEND-PING-TO-DATATARGET" | translate }}</p>
@@ -24,7 +30,8 @@
         <mat-select
           [(value)]="payloadDecoderId"
           [placeholder]="'DATATARGET.TEST_CONNECTION.CHOOSE-PAYLOAD-DECODER' | translate"
-          class="mt-3 form-control">
+          class="mt-3 form-control"
+        >
           <mat-option [value]="0">
             {{ "QUESTION.DATATARGET.NO-PAYLOAD-DECODER-SELECTED" | translate }}
           </mat-option>
@@ -32,12 +39,14 @@
             {{ payloadDecoder.name }}
           </mat-option>
         </mat-select>
-        <button (click)="pingDataTarget(payloadData)" [disabled]="!payloadData"
-                class="mt-3 btn btn-primary">{{ "DATATARGET.TEST_CONNECTION.SEND-DATA-PACKAGE" | translate }}
+        <button (click)="pingDataTarget(payloadData)" [disabled]="!payloadData" class="mt-3 btn btn-primary">
+          {{ "DATATARGET.TEST_CONNECTION.SEND-DATA-PACKAGE" | translate }}
         </button>
         <p class="mt-2" style="white-space: pre-wrap">
           {{ "DATATARGET.TEST_CONNECTION.SEND-DATA-PACKAGE-DESCRIPTION" | translate }}
-          {{ dataTarget.type === DataTargetType.MQTT ? ("DATATARGET.TEST_CONNECTION.MQTT-DISCLAIMER"| translate) : "" }}
+          {{
+            dataTarget.type === DataTargetType.MQTT ? ("DATATARGET.TEST_CONNECTION.MQTT-DISCLAIMER" | translate) : ""
+          }}
         </p>
       </div>
     </div>
@@ -76,9 +85,6 @@
         >
         </ngx-monaco-editor>
       </div>
-    </div>
-    <div *ngIf="loading">
-      <app-loading-spinner></app-loading-spinner>
     </div>
   </div>
 </div>
