--- a/src/app/applications/applications-list/application-map/application-map.component.html
+++ b/src/app/applications/applications-list/application-map/application-map.component.html
@@ -1,3 +1,7 @@
 <div class="map-page thirty-height">
-  <app-map [coordinateList]="coordinateList" [isFromApplication]="true" [applicationId]="222"></app-map>
+  @if(coordinateList){
+
+  <app-map [coordinateList]="coordinateList" [isFromApplication]="true" [applicationId]="22"></app-map>
+
+  }
 </div>
