--- a/src/app/applications/applications-list/application-visualization/application-visualization-failed-requests/application-visualization-failed-requests.component.html
+++ b/src/app/applications/applications-list/application-visualization/application-visualization-failed-requests/application-visualization-failed-requests.component.html
@@ -1,5 +1,3 @@
 <div class="chart-container">
-  <h2>Top 3 rest codes</h2>
-
-  <canvas id="requestChart">{{ chart }}</canvas>
+  <canvas id="requestChart"></canvas>
 </div>
