--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,9 @@
 <nav
-  class="navbar navbar-expand-md navbar-light d-md-flex align-items-md-start flex-md-column p-2 pt-md-4"
+  class="navbar navbar-expand-md navbar-light d-md-flex align-items-md-start flex-md-column p-2"
   aria-expanded="false"
 >
-  <div class="navbar-brand p-0 pl-2 mb-5">
-    <img class="img-logo" alt="OS2IoT-logo" [src]="imagePath" />
-  </div>
+  <img class="img-logo" alt="OS2IoT-logo" [src]="imagePath" />
+
   <div *ngIf="!isLoggedIn(); else loggedInBlock" class="collapse navbar-collapse flex-grow-0" id="navbar">
     <ul class="navbar-nav flex-column">
       <li class="nav-item">
