--- a/src/assets/scss/elements/_img.scss
+++ b/src/assets/scss/elements/_img.scss
@@ -2,8 +2,9 @@
   background-color: transparent;
   width: 50px;
   @media (min-width: $screen-md-min) {
-    width: 100px;
+    width: 60px;
   }
+  margin-bottom: 5px;
 }
 
 @mixin img-cover($url) {
